# thestarboard

./: .dockerignore  .git-blame-ignore-revs  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
db/: Dockerfile  docker-entrypoint.sh
db/migrations/: 0000-versioning.md  0000-versioning.sql  0001-base.sql  0002-unique-message-id.sql  0003-fix-message-star-trigger.sql  0004-add-starboard-guild-config.sql  0005-add-comments.sql  0006-fix-starboard-guild-config-trigger.sql  0007-add-starboard-threshold.sql  0008-retain-message-user-ids.sql  0009-one-star-per-message-user.sql  0010-rename-star-threshold.sql  0011-add-max-message-age.sql
docs/dev/: bumping_deps.md  concept.md  realtime_starboard.md
src/thestarboard/: __main__.py  bot.py  config.py  config_default.toml  partials.py  thestarboard.pot  translator.py
src/thestarboard/cogs/: cleanup.py  errors.py  owner.py
src/thestarboard/cogs/stars/: __init__.py  commands.py  events.py
src/thestarboard/database/: __init__.py  api.py  cache.py
src/thestarboard/locales/: README.md
src/thestarboard/locales/en_US/LC_MESSAGES/: thestarboard.po
