[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thestarboard"
description = "A starboard discord bot."
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "discord.py~=2.3",
    "pydantic~=2.3",
]

[project.optional-dependencies]
dev = ["black>=23.7.0"]
jishaku = ["jishaku @ git+https://github.com/Gorialis/jishaku@4590932f56a0e5a33b15d1c536955d4898d6b04e"]

[tool.setuptools.dynamic]
version = { attr = "thestarboard.__version__" }
